# Phase_1-TODO-LIST

./: .gitignore  README.md  pyproject.toml  vercel.json
.claude/: settings.local.json
.claude/agents/: auth_specialist_agent.md  fastapi_backend_agent.md  fullstack_architect_agent.md  integration_specialist_agent.md  mcp_bridge_agent.md  nextjs_frontend_agent.md  todo_ai_orchestrator.md
.claude/skills/: index.md  mcp_task_tools.md  phase2_better_auth_jwt.md  phase2_full_web_crud.md  phase2_jwt_backend_security.md  phase2_migrate_postgresql.md  phase2_setup_fastapi_backend.md  phase2_setup_nextjs_frontend.md  stateless_db_manager.md
.spec-kit/: config.yaml
.specify/constitution/: constitution.md
.specify/features/: 02_intermediate_features.md
docs/: evolution.md
legacy/phase1-console/: 03_advanced_features.md  TodoPythonSubAgent.md  constitution.md  main.py  models.py  phase1_history.md  phase1_plan.md  tasks.json  todo_core.md
phase2-web-evolution/: history_log.md
phase2-web-evolution/backend/: CLAUDE.md  Dockerfile  auth_utils.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
phase2-web-evolution/backend/alembic/: env.py
phase2-web-evolution/backend/alembic/versions/: cfe5e8fb5984_initial_migration.py
phase2-web-evolution/backend/routes/: auth.py  tasks.py
phase3_chatbot/: history_log.md
phase4-kuber/: .gitignore  CONSTITUTION.md  Dockerfile.backend  Dockerfile.frontend  PLAN.md  TASKS.md  deploy_commands.md  docker-compose.yml  k8s-deploy.yaml  package.json  requirements.txt
src/: main.py  models.py  services.py  tasks.json
(+101 files in other folders)
