[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moin_sheikh", email = "165296245+msheikhmoin@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
